# DV2626_machine_learning

./: README.md  pyproject.toml
assignment-1/: README.md  main.py  pyproject.toml  requirements.txt
assignment-2/: README.md  main.py  pyproject.toml
final_project/: Home.py  PLAN.md  README.txt  pyproject.toml  requirements.txt
final_project/pages/: 1_EDA.py  2_Movie_Recommendation.py
final_project/src/: data_loader.py  utils.py
